Modified CSS that’s preventing the whole page from showing correctly from an iframe (iframe content overflows div and becomes unresponsive) on iOS Safari.

--- a/css/jyutpingApp.css
+++ b/css/jyutpingApp.css
@@ -1,4 +1,12 @@
 /*
+ *	@template	index.html
+ */
+#jyutping-table-layer {
+	width: 1px;
+	min-width: 100%;
+}
+
+/*
  *	@template	jyutping.html
  */
 
